Fix an overflow

--- a/website_event_track_advanced/static/src/less/style.less
+++ b/website_event_track_advanced/static/src/less/style.less
@@ -193,7 +193,7 @@ web.assets_frontend.0.css:22
 }
 
 /* Workshops */
-.workshop-list-item {
+.workshop-list-item, .poster-list-item{
     overflow: hidden;
 }
 
